# telethon_fapi_parse

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  requirements.txt
src/api/: main.py
src/api/db/: database.py
src/api/db/migrations/: env.py
src/api/db/migrations/versions/: 2024_01_14_0307-fc99570df576_init.py
src/api/db/models/: __init__.py  message.py  user.py
src/api/db/repositories/: auth.py  messages.py
src/api/di/: init_dependencies.py
src/api/di/dependencies/: auth.py  messages.py
src/api/interfaces/repositories/: auth.py  messages.py
src/api/interfaces/services/: auth.py  messages.py
src/api/routers/: __init__.py  auth.py  messages.py
src/api/services/: auth.py  messages.py
src/telegram_bot/: api_client.py  cache.py  main.py  parser.py
src/telegram_bot/factory/: api_client.py  cache.py  parser.py
src/telegram_bot/handlers/: __init__.py  auth.py  messages.py  parse.py
src/telegram_bot/permissions/: __init__.py  login_required.py  phone_number_recognized.py
src/telegram_bot/routers/: __init__.py  router.py
