[tool.poetry]
name = "telethon_fapi_parse"
version = "0.1.0"
description = ""
authors = []

[tool.black]
line-length = 100

[tool.isort]
atomic = true
profile = "black"

[tool.poetry.dependencies]
python = "3.11.4"
pre-commit = "^3.4.0"
uvicorn = "^0.25.0"
fastapi = "^0.109.0"
aiohttp = "^3.9.1"
sqlalchemy = "^2.0.25"
telethon = "^1.33.1"
qrcode = "^7.4.2"
alembic = "^1.13.1"
aiosqlite = "^0.19.0"
selenium = "^4.16.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-bugbear = "^23.3.12"
flake8-builtins = "^2.1.0"
flake8-cognitive-complexity = "^0.1.0"
flake8-commas = "^2.1.0"
flake8-django = "^1.1.5"
flake8-quotes = "^3.3.2"
flake8-todo = "^0.7"
flake8-variables-names = "^0.0.5"
isort = "^5.12.0"
black="^23.7.0"
add-trailing-comma="^3.0.1"
